--- a/ronny-site/src/app/pages/courses/courses.page.html
+++ b/ronny-site/src/app/pages/courses/courses.page.html
@@ -16,6 +16,7 @@
         <span class='circle' [class.selected]='this.courseIndex === 2' id='sysadmin'></span>
         <span class='circle' [class.selected]='this.courseIndex === 3' id='forensics'></span>
         <span class='circle' [class.selected]='this.courseIndex === 4' id='unix'></span>
+        <span class='circle' [class.selected]='this.courseIndex === 5' id='research'></span>
       </ion-title>
       <ion-buttons slot='end' class='right-arrow' [class.mobile-right-arrow]='this.mobileService.isMobile()'>
         <ion-button (click)='nextCourse()'><ion-icon class='arrow' color='dark' name='chevron-forward'></ion-icon></ion-button>
