--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
       <br>
       <div class='info-text-div'>
         <ion-text class='info-text'>
-          <p>    Hello! My name is Dr. Ronny Bazan-Antequera, and I am an assistant teaching professor at the University of Missouri-Columbia.
+          <p>    Hello! My name is Ronny Bazan-Antequera, and I am an assistant teaching professor at the University of Missouri-Columbia.
             Prior to joining the EECS department, I worked in the industry as a Senior Systems Administrator. I received a Fullbright Scholarship to attend Mizzou
             where I earned my Master's degree in Computer Science along with an Outstanding Master Student award. I went on to receive my PhD in
             Electrical Engineering & Computer Science from the University of Missouri.
@@ -80,6 +80,13 @@
         <ion-card-header>
           <ion-card-title class='course-card-title'>
             CS/IT 3530 - UNIX Operating System
+          </ion-card-title
+        ></ion-card-header>
+      </ion-card>
+      <ion-card class='course-card' id='research-card' routerLink='/courses/undergrad_research'>
+        <ion-card-header>
+          <ion-card-title class='course-card-title'>
+            IT 4990 - Undergraduate Research (Individual Study)
           </ion-card-title
         ></ion-card-header>
       </ion-card>
