--- a/ronny-site/src/app/pages/teaching-popover/teaching-popover.component.html
+++ b/ronny-site/src/app/pages/teaching-popover/teaching-popover.component.html
@@ -14,4 +14,7 @@
   <ion-item>
     <a routerLink='/courses/unix_os' routerLinkActive='active' (click)='dismiss()'>UNIX Operating System</a>
   </ion-item>
+  <ion-item>
+    <a routerLink='/courses/undergrad_research' routerLinkActive='active' (click)='dismiss()'>Undergraduate Research</a>
+  </ion-item>
 </ion-list>
